# kunver-new

./: .gitignore  .windsurfrules  GEMINI.md  LICENSE  README.MD  agents.md  manager.cjs  package.json  pnpm-lock.yaml  publish.sh  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: publish.yml
src/: constant.ts  index.ts  project-starter.ts
src/helpers/: add-manager-script.ts  approve.ts  bun-approve.ts  change-cmake-project-name.ts  config-files.ts  configure-cmake.ts  copy-config-files.ts  copy-template.ts  create-react.ts  create-template.ts  index.ts  install-deps.ts  install-tailwind.ts  open-in-editor.ts  pnpm-approve.ts  postinstall.ts  utils.ts
src/project/: create-react.ts
src/public/templates/cmake-cpp/: CMakeLists.txt  README.md  _clang-format  (+4 more)
src/public/templates/uv-notebook/: README.md  _gitignore  main.ipynb  pyproject.toml
src/react-starter/: install-react.ts  install-tailwind.ts  post-install-react.ts  post-install-tools.ts
src/starters/: create-cpp.ts  create-electron-svelte.ts  create-next.ts  create-python-notebook.ts  create-react.ts  create-wxt.ts  index.ts
src/wxt-starter/: install-wxt.ts  post-install-wxt-svelte.ts  post-install-wxt.ts
test/: project-starter.test.ts
test/helpers/: add-manager-script.test.ts  copy-template.test.ts  postinstall.test.ts
test/starters/: create-python-notebook.test.ts  create-wxt.test.ts
tests/: react-test.ts
tests/react-tests/: bun.test.ts  npm.test.ts  pnpm.test.ts  react-tests.ts  react.test.ts  shared-tests.ts
tests/tools/: tempdir.ts
tests/wxt-tests/: wxt.test.ts
(+67 files in other folders)
