[project]
name = "pytorch-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "numpy>=2.4.3",
  "pip>=26.0.1",
  # "torch",
  # "torchvision",
  # "torchaudio",
  "pandas>=3.0.1",
]

# Uncomment the Torch-related lines below if you want uv to install PyTorch packages too.
#
# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
# torchvision = [
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
# torchaudio = [
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
#
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
